<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_app_name_middle"
            android:textAlignment="center"
            android:textColor="@color/inputName"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="34sp" />

        <TextView
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/name"
            android:textColor="@color/inputName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nameInput"
            tools:ignore="LabelFor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="Hong Doe"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/inputName" />

        <TextView
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/email"
            android:textColor="@color/inputName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailInput"
            tools:ignore="LabelFor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_placeholder"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/inputName" />

        <TextView
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/password"
            android:textColor="@color/inputName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordInput"
            tools:ignore="LabelFor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Join" />

        <Button
            android:id="@+id/toLogin"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Already have an account?" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>