<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/email"
            android:textColor="@color/inputName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_placeholder"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/inputName"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/password"
            android:textColor="@color/inputName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>